Tweaks to Atlas section for zip folder

--- a/Training/MCX2024_2A_mmc_training.ipynb
+++ b/Training/MCX2024_2A_mmc_training.ipynb
@@ -826,6 +826,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Prepare MMC parameters and run MMC simulation"
+      ],
+      "metadata": {
+        "id": "RUMTJlarc0sW"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%%octave\n",
@@ -1061,194 +1070,6 @@
       ],
       "metadata": {
         "id": "MaWtMZUaonJd"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%octave\n",
-        "help mmclab"
-      ],
-      "metadata": {
-        "id": "Ep9Z4_7DU0ib"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "#<font color='orange'>**Appendix** - Advanced Tips and Tutorials"
-      ],
-      "metadata": {
-        "id": "LhoAzxTAbGlj"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Appendix 1: refining mesh density near the source"
-      ],
-      "metadata": {
-        "id": "ublJFMx3butr"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "# this may be necessary when you are plotting near the source or want higher spatial resolution for fluence near the source (or any other feature)\n",
-        "# prevents performance issues from an otherwise large domain\n",
-        "\n",
-        "%%octave\n",
-        "\n",
-        "addpath(genpath([pwd filesep 'mmc']));                 % add path to mmc\n",
-        "addpath([pwd filesep 'iso2mesh']);                 % add path to iso2mesh\n",
-        "\n",
-        "\n",
-        "load('layered_slab');\n",
-        "centroids = meshcentroid(nodes, elems(:,1:4));\n",
-        "\n",
-        "% set maxvols to a large value by default\n",
-        "% to later set smaller values for specific elements\n",
-        "maxvols = ones(size(elems,1),1)*10000;\n",
-        "% refine the size of tetrahedrons near the source if desired (not necessary in DMMC):\n",
-        "for i=1:size(elems,1)\n",
-        "\n",
-        "    % Get elem centroid distance from source\n",
-        "    Dist = norm([centroids(i,:).-[100,100,0]], 2);\n",
-        "    dist(i) = Dist;\n",
-        "    % Refine elements based on distance to source\n",
-        "    if Dist<38\n",
-        "        maxvols(i)=4;\n",
-        "    elseif Dist<20\n",
-        "        maxvols(i)=2;\n",
-        "    end\n",
-        "end\n",
-        "\n",
-        "% this command selectively refines (splits into smaller tetrahedrons)\n",
-        "% all the tetrahedrons based on the maxvols sizes.\n",
-        "[new_nodes, new_elems] = meshrefine(nodes, elems, maxvols);\n",
-        "\n",
-        "plotmesh(new_nodes, new_elems);\n",
-        "view(-45, -45);\n",
-        "\n",
-        "% save new mesh values:\n",
-        "nodes = new_nodes;\n",
-        "elems = new_elems;\n",
-        "save -mat7-binary layered_slab nodes elems;"
-      ],
-      "metadata": {
-        "id": "_JEY7N2z2Po_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "##Appendix 2: Run another MMC Slab-brain simulation with detector as source to form jacobian"
-      ],
-      "metadata": {
-        "id": "T2DNpksubfce"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "\n",
-        "%%octave\n",
-        "\n",
-        "load config\n",
-        "\n",
-        "%% set srcpos to fourth detector position (note we have to specify indices 1 to 3 because the 4th column refers to detector width)\n",
-        "cfg_mmc.srcpos=cfg_mmc.detpos(4,1:3);\n",
-        "\n",
-        "% trim off the 4th detector from the list of detectors\n",
-        "cfg_mmc.detpos=cfg_mmc.detpos(1:3,:);\n",
-        "\n",
-        "%% run the simulation\n",
-        "[fluence_adj] = mmclab(cfg_mmc);\n",
-        "\n",
-        "%% save the resulting data:\n",
-        "save -mat7-binary adjoint_sim fluence_adj;"
-      ],
-      "metadata": {
-        "id": "z4_fVhEkmUhR"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "%%octave\n",
-        "\n",
-        "load sim_data\n",
-        "load layered_slab\n",
-        "load adjoint_sim\n",
-        "\n",
-        "% distance along the x-axis for the plane containing\n",
-        "% source and detectors\n",
-        "cross_section_srcdist = 99.5;\n",
-        "\n",
-        "% define a plane using cross section srcplane:\n",
-        "cutting_plane = [cross_section_srcdist 0 0;cross_section_srcdist 1 0;cross_section_srcdist 0 1];\n",
-        "\n",
-        "% vector of y-coorinates for the cross section\n",
-        "% note that our slab is 200mm wide\n",
-        "% if we want to plot fluence values at the center of each 1mm cube,\n",
-        "% we would start at 0.5 and go to 199.5 with 200 steps\n",
-        "cubesize = 1; % cube of 1mm x 1mm x 1mm\n",
-        "\n",
-        "y_vals = linspace(0+cubesize/2, 200-cubesize/2, 200);\n",
-        "\n",
-        "% vector of z-coordinates for the cross section\n",
-        "% same as y-coordinates but the height of the slab is 50mm\n",
-        "z_vals = linspace(0+cubesize/2, 50-cubesize/2, 50);\n",
-        "\n",
-        "% make a grid of coordinates for all fluence values in the cross section\n",
-        "[yy,zz]=meshgrid(y_vals,z_vals);\n",
-        "\n",
-        "% qmeshcut gets the intersections of all mesh edges and a plane\n",
-        "% as a set of coordinate points and a set of interpolated values\n",
-        "[cutpos,cutvalue,~]=qmeshcut(cfg_mmc.elem(:,1:4),cfg_mmc.node,fluence.data.*fluence_adj.data,cutting_plane);\n",
-        "\n",
-        "plottable_fluence_data=griddata(cutpos(:,2),cutpos(:,3),cutvalue,yy,zz);\n",
-        "\n",
-        "% we take the absolute value because arbitrarily small fluence\n",
-        "% may be recorded as negative values\n",
-        "[yy_plot,zz_plot]=meshgrid(1:(200),1:(50));\n",
-        "figure;\n",
-        "clines = [-20:1:0];\n",
-        "contour(yy_plot,zz_plot,log10(abs(plottable_fluence_data)),clines, 'linewidth',5,'linestyle','--','DisplayName','Diffusion');\n",
-        "axis equal;\n",
-        "\n",
-        "%% we can also re-plot with jacobian values unbiased by node volumes:\n",
-        "\n",
-        "%get node volumes\n",
-        "node_volumes = nodevolume(cfg_mmc.node, cfg_mmc.elem);\n",
-        "\n",
-        "% qmeshcut gets the intersections of all mesh edges and a plane\n",
-        "% as a set of coordinate points and a set of interpolated values\n",
-        "[cutpos,cutvalue,~]=qmeshcut(cfg_mmc.elem(:,1:4),cfg_mmc.node,fluence.data.*fluence_adj.data./node_volumes,cutting_plane);\n",
-        "\n",
-        "plottable_fluence_data=griddata(cutpos(:,2),cutpos(:,3),cutvalue,yy,zz);\n",
-        "\n",
-        "% we take the absolute value because arbitrarily small fluence\n",
-        "% may be recorded as negative values\n",
-        "[yy_plot,zz_plot]=meshgrid(1:(200),1:(50));\n",
-        "figure;\n",
-        "clines = [-20:1:0];\n",
-        "contour(yy_plot,zz_plot,log10(abs(plottable_fluence_data)),clines, 'linewidth',5,'linestyle','--','DisplayName','Diffusion');\n",
-        "axis equal;\n",
-        "\n",
-        "\n"
-      ],
-      "metadata": {
-        "id": "LfW4V-Zynkkl"
       },
       "execution_count": null,
       "outputs": []
