--- a/Training/MCX2024_2A_mmc_training.ipynb
+++ b/Training/MCX2024_2A_mmc_training.ipynb
@@ -773,8 +773,7 @@
         "## **Key objectives of the section:**\n",
         "\n",
         "*   Loading a pre-made mesh\n",
-        "*   Plotting time-resolved fluence\n",
-        "*   Using detected photons and partial paths"
+        "*   Plotting cross sections of a complex mesh"
       ],
       "metadata": {
         "id": "2oRatwVcV242"
