Replaced setup cells with Qianqian's version, mmclab not working anymore on CPU, not sure about GPU.

--- a/Training/MCX2024_2A_mmc_training.ipynb
+++ b/Training/MCX2024_2A_mmc_training.ipynb
@@ -37,97 +37,127 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "bbO3hKIadvYn"
+      },
+      "outputs": [],
       "source": [
-        "#@title Init 1: Initial setup of environment for running MMCLAB (run the below section once)</font>\n",
+        "#@title <font color='orange'>Init 1: Initial setup of environment for running MCXLAB (run the below section once)</font>\n",
         "\n",
-        "# hide logs since they take up lots of screen space during installation\n",
-        "#%%capture\n",
         "# install octave and oct2py\n",
-        "! sudo apt-get update && sudo apt-get install octave jq libpocl2 pocl-opencl-icd    # install octave (a free matlab clone)\n",
-        "! pip install oct2py jdata bjdata matplotlib   # install oct2py, jdata, bjdata and matplotlib Python modules\n",
-        "\n",
-        "!apt-get install nvidia-opencl-icd-384        # optional: install nvidia OpenCL(+2min), needed for mmc/mmclab demos\n",
-        "!apt-get install liboctave-dev # liboctave needed to install mmclab octave\n",
+        "! apt-get update && apt-get install octave jq libpocl2 pocl-opencl-icd libnvidia-compute-535   # install octave (a free matlab clone), jq and OpenCL runtimes\n",
+        "! python3 -m pip install oct2py jdata bjdata matplotlib   # install oct2py, jdata, bjdata and matplotlib Python modules\n",
         "\n",
         "# add octave support to colab notebook\n",
         "%load_ext oct2py.ipython\n",
         "\n",
-        "# download and unzip mcxlab\n",
-        "! rm -rf mcxlab*\n",
-        "#! wget http://mcx.space/nightly/release/v2020/mmclab-linux-x86_64-v2020.zip  # download MCX suite\n",
-        "#! unzip -o mmclab-linux-x86_64-v2020.zip && rm -rf mmclab-linux-x86_64-v2020.zip # unzip MCX suite\n",
-        "\n",
-        "# download and install MMC\n",
-        "!git clone https://github.com/fangq/mmc.git\n",
-        "\n",
-        "# compile MMC for octave\n",
-        "!make oct -C mmc/src\n",
+        "# download and unzip MCXStudio\n",
+        "! rm -rf MCXStudio*\n",
+        "! curl https://mcx.space/nightly/release/MCX24/MCXStudio-linux-x86_64-nightlybuild.zip -O MCXStudio-linux-x86_64-nightlybuild.zip # download MCX suite\n",
+        "! unzip -o MCXStudio-linux-x86_64-nightlybuild.zip && rm -rf MCXStudio-linux-x86_64-nightlybuild.zip # unzip MCX suite\n",
         "\n",
         "# add executable to the shell's paths\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcx/bin/mcx /usr/local/bin\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl /usr/local/bin\n",
-        "! sudo cp -a $PWD/MCXStudio/MCXSuite/mmc/bin/mmc /usr/local/bin\n",
-        "! cp -a $PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex $PWD/MCXStudio/MATLAB/zmat/\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcx/bin/mcx\" \"/usr/local/bin\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mcxcl/bin/mcxcl\" \"/usr/local/bin\"\n",
+        "! cp -a \"$PWD/MCXStudio/MCXSuite/mmc/bin/mmc\" \"/usr/local/bin\"\n",
+        "! cp -a \"$PWD/MCXStudio/MATLAB/zmat/octave/gnu-linux-x86_64/zipmat.mex\" \"$PWD/MCXStudio/MATLAB/zmat/\"\n",
         "\n",
         "# if a GPU runtime can not be allocated, run this section to setup OpenCL and MCXLAB-CL\n",
-        "! [[ ! -f `which nvidia-smi` ]] && sudo mv /usr/local/bin/mcxcl /usr/local/bin/mcx\n",
+        "! [[ ! -f `which nvidia-smi` ]] && mv \"/usr/local/bin/mcxcl\" \"/usr/local/bin/mcx\"\n",
         "! mcx -L"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%octave\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/mcxlab']);                 % add path to mcxlab\n",
+        "addpath([pwd filesep 'MCXStudio/MCXSuite/mcx' filesep 'utils']);  % add path to mcx helper functions\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/mmclab']);                 % add path to mmclab\n",
+        "addpath([pwd filesep 'MCXStudio/MCXSuite/mmc' filesep 'matlab']); % add path to mmc helper functions\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/iso2mesh']);               % add path to iso2mesh/jsonlab\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/brain2mesh']);             % add path to brain2mesh\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/zmat']);                   % add path to zmat for data compression\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/redbird-m/matlab']);              % add path to brain2mesh\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/hyperspectral_demo']);     % add path to hyperspectral_demo for exec 4\n",
+        "\n",
+        "struct_levels_to_print(0);\n",
+        "print_struct_array_contents(0);\n",
+        "\n",
+        "if(system('which nvidia-smi'))                   % if this runtime does not have NVIDIA GPU support\n",
+        "    addpath([pwd filesep 'MCXStudio/MATLAB/mcxlabcl']);    % add path to mcxlabcl\n",
+        "    USE_MCXCL=1;                                 % set USE_MCXCL flag in the base workspace\n",
+        "end"
       ],
       "metadata": {
-        "id": "FOSfRwsyzQgt",
-        "collapsed": true
+        "id": "66iPFJcOdzOn"
       },
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true,
-        "id": "8QsyOOBgAxfA",
-        "cellView": "form"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "# @title Init 2: Install iso2mesh for tetrahedral meshing in octave:\n",
-        "%%capture\n",
-        "# download and unzip iso2mesh\n",
-        "!git clone https://github.com/fangq/iso2mesh.git"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "collapsed": true,
-        "id": "IWg8T2-5SwT4",
-        "cellView": "form"
-      },
-      "outputs": [],
-      "source": [
-        "# @title Init 3: Add paths in octave (same as adding folders in matlab)\n",
-        "%%octave\n",
-        "addpath(genpath([pwd filesep 'mmc']));                 % add path to mmc\n",
-        "addpath(genpath([pwd filesep 'mmclab']));\n",
-        "addpath(genpath([pwd filesep 'iso2mesh']));                 % add path to iso2mesh"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# @title Init 4: Check installation of different packages in octave\n",
-        "%%octave\n",
-        "% check that mmclab is installed\n",
-        "help mmclab\n",
-        "% check that iso2mesh is installed\n",
-        "help dist2surf\n",
-        "\n",
-        "disp(\"**********************Libraries are Running as Intended*************************\")"
+        "### <font color='orange'>Init 2: Only need to run this once at the beginning</font>"
       ],
       "metadata": {
-        "id": "bfvMmvOCOvdt",
-        "collapsed": true
+        "id": "3FuiSDH_w6Dh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%octave\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/mcxlab']);                 % add path to mcxlab\n",
+        "addpath([pwd filesep 'MCXStudio/MCXSuite/mcx' filesep 'utils']);  % add path to mcx helper functions\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/mmclab']);                 % add path to mmclab\n",
+        "addpath([pwd filesep 'MCXStudio/MCXSuite/mmc' filesep 'matlab']); % add path to mmc helper functions\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/iso2mesh']);               % add path to iso2mesh/jsonlab\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/brain2mesh']);             % add path to brain2mesh\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/zmat']);                   % add path to zmat for data compression\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/redbird-m/matlab']);              % add path to brain2mesh\n",
+        "addpath([pwd filesep 'MCXStudio/MATLAB/hyperspectral_demo']);     % add path to hyperspectral_demo for exec 4\n",
+        "\n",
+        "struct_levels_to_print(0);\n",
+        "print_struct_array_contents(0);\n",
+        "\n",
+        "if(system('which nvidia-smi'))                   % if this runtime does not have NVIDIA GPU support\n",
+        "    addpath([pwd filesep 'MCXStudio/MATLAB/mcxlabcl']);    % add path to mcxlabcl\n",
+        "    USE_MCXCL=1;                                 % set USE_MCXCL flag in the base workspace\n",
+        "end"
+      ],
+      "metadata": {
+        "id": "sQov6LtveG93"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### <font color='orange'>Init 3: Verify your environments</font>\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "oPiJ3kcF4MK2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%octave\n",
+        "\n",
+        "which mcx\n",
+        "which s2m\n",
+        "which zipmat\n",
+        "\n",
+        "mcxlab('gpuinfo')     % use this command to list supported CPU or GPU in octave\n",
+        "unix('mcx -L')        % use -L flag to list GPU in the command line"
+      ],
+      "metadata": {
+        "id": "LnrnJOcJsQzW"
       },
       "execution_count": null,
       "outputs": []
@@ -823,15 +853,6 @@
       },
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Prepare MMC parameters and run MMC simulation"
-      ],
-      "metadata": {
-        "id": "RUMTJlarc0sW"
-      }
     },
     {
       "cell_type": "code",
