add additional guidelines for using colab and notebook

--- a/Training/MCX2024_1A_jupyter_notebook_basics.ipynb
+++ b/Training/MCX2024_1A_jupyter_notebook_basics.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjus6KsN01ObtZNseBO+0B",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyP4+tCac4Ob6yR7uCSphfVI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,9 +31,9 @@
       "cell_type": "markdown",
       "source": [
         "![Workshop Logo](https://mcx.space/wiki/upload/mcx24_logo.png)\n",
-        "# MCX Training Workshop 2024 - Day 1, Session 1.A\n",
+        "# MCX Training Workshop 2024 - Day 1, Session 1A\n",
         "\n",
-        "## Session 1.A: Jupyter Notebook basics\n"
+        "## Session 1A: Google Colab and Jupyter Notebook Basics\n"
       ],
       "metadata": {
         "id": "ptMYeU1cGzsE"
@@ -41,16 +42,84 @@
     {
       "cell_type": "markdown",
       "source": [
-        "This is the first time we use Jupyter Notebook for our training.\n",
+        "> Purpose: <font color='green'>In this document, we go over important guidelines to help you use Google Colab and Jupyter Notebook and familiar yourself with the training material format.</font>"
+      ],
+      "metadata": {
+        "id": "ZYtDub9Mws_k"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# <font color='orange'>Preparation before the workshop</font>\n",
+        "\n",
+        "You do not need a laptop that can run MCX or has an NVIDIA GPU to participate this workshop. We will use Google Colab - an online Jupyter Notebook server and cloud-computing virtual machines provided by Google.\n",
+        "\n",
+        "Although Google has made Colab free to use, the free-access limits the time for how long your session can run, especially if you use GPU runtimes (which we need for the majority of the workshop). To ensure your uninterrupted experience with this training, <font color='red'>**we highly suggest all participants, in-person or online, [purchasing 100 compute units \"Pay As You Go\"](https://colab.research.google.com/signup) for the cost of $10 USD before the workshop**</font>. This will support your Google account to allocate and run Google Colab GPU virtual server for ~60 hours (using the T4 GPU), which is more than sufficient for the entire workshop.\n",
+        "\n",
+        "To purchase compute units, please visit\n",
+        "\n",
+        "https://colab.research.google.com/signup\n",
+        "\n",
+        "You can also use the above page to track how many compute units has left as you use the service. No subscription is needed if you choose the `Pay as you go` option. Please choose the T4 GPU in the runtime setting; choosing higher-end GPU is possible but will consume compute units at a faster rate.\n",
+        "\n",
+        "We are happy to reimburse you $10 USD if your group is unable to reimburse this cost for you."
+      ],
+      "metadata": {
+        "id": "hC5Lo5trmbk8"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# What is Jupyter Notebook?\n",
+        "\n",
+        "This is the first time we use [Jupyter Notebook](https://jupyter.org/) for our training. We love it! we hope you too find it useful.\n",
         "\n",
         "Jupyter Notebook is an interactive document that allows to include graphics, hyper-text and runnable scripts/codes in a single file and can be browsed and executed in a web browser.\n",
         "\n",
-        "In this training, we have prepared all training materials in the form of Jupyter Notebook files (*.ipynb) and included our demos, example and user exercises in the notebook.\n",
+        "In this training, we have prepared all training materials in the form of Jupyter Notebook files (`*.ipynb`) and included our demos, example and user exercises in the notebook.\n",
         "\n",
         "- One can load and run such notebook files in a [locally run Jupyter Notebook server](https://jupyter.org/install) (`pip install notebook; jupyter notebook`), or\n",
         "- One can also load those in a locally run [Google Colab server](https://research.google.com/colaboratory/local-runtimes.html)\n",
         "- They can also be uploaded to Google Drive/Github and run on [Google Colab cloud servers](https://colab.research.google.com/)\n",
         "\n",
+        "Your copy of the notebook is fully editable - and if you save it to Google Drive, your changes are also automatically saved (highly recommended)."
+      ],
+      "metadata": {
+        "id": "n2G42f9Gz1S-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# How to start using each training notebook?\n",
+        "\n",
+        "Please download the latest training materials package [from this repository](https://github.com/COTILab/MCX24Workshop/archive/refs/heads/master.zip), unzip it, and upload all `.ipynb` files to a folder named `MCX24` inside your Google Drive.\n",
+        "\n",
+        "Saving to Google Drive has two benefits -\n",
+        "- you can modify any part of the notebook as you wish and your changes are automatically saved in your Google Drive copy automatically\n",
+        "- because each notebook is opened from individual accounts, Google will not impose a runtime limit on the document as it does on shared notebooks with a common URL.\n",
+        "\n",
+        "When we start each training unit, please browser https://colab.research.google.com/ from your favorite browser, and select Google Drive in the open-notebook dialog, and pick the matching notebook for the session.\n",
+        "\n",
+        "When using these notebooks on Google Colab, please remember close and delete a runtime once you are done with the unit. This will avoid paused sessions silently consuming your compute units (or free credits).\n",
+        "\n",
+        "You can check all previously opened sessions via menu **\"Runtime/Manage sessions\"**.\n",
+        "\n",
+        "When you are closing a notebook, please remember to select the drop-down menu on the right-top corner of the notebook page, right next to the \"RAM/Disk\" icons, and select **\"Disconnect and delete runtime\"**. Otherwise, your note notebook will not be able to connect to any runtimes because Google Colab only permits one active notebook.\n",
+        "\n",
+        "If you accidentally close your tab before explicitly disconnecting and deleting your runtime, you can go to menu Runtime, and select **\"Manage sessions\"** to disconnect/delete previously opened runtimes.\n",
+        "\n",
+        "**To avoid being locked out of the Google Colab service, please always maintain a single session.**"
+      ],
+      "metadata": {
+        "id": "gXmLECDrrHVj"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "This training fully utilizes open-source software and environments. Particularly, we use the open-source MATLAB clone, GNU Octave, to avoid the needs of MATLAB licenses. MCXLAB/MMCLAB and nearly all of our MATLAB toolboxes (Iso2Mesh, JSONLab, Brain2Mesh, and Redbird-m) are compatible with both Octave and MATLAB.\n",
         "\n",
         "At the begining of every all training notebook document, we have a special section <font color=\"orange\">\"Step 0\"</font> that is responsible to set up all needed software components (Octave, MCX suite etc.). You MUST run this section once when\n",
@@ -60,7 +129,7 @@
         "without running this section, most of the provided training examples will not run properly."
       ],
       "metadata": {
-        "id": "n2G42f9Gz1S-"
+        "id": "rDxqT2MUsQu9"
       }
     },
     {
@@ -87,18 +156,17 @@
       },
       "outputs": [],
       "source": [
-        "#@title <font color='orange'>Init 1: Initial setup of environment for running MCXLAB (run the below section once)</font>\n",
+        "#@title <font color='orange'>Init 1: Initial setup of environment for running MCXLAB (run the below section once - this takes 1.5-2 min to complete)</font>\n",
         "\n",
         "# install octave and oct2py\n",
-        "! sudo apt-get update && sudo apt-get install octave jq libpocl2 pocl-opencl-icd    # install octave (a free matlab clone)\n",
-        "! pip install oct2py jdata bjdata matplotlib   # install oct2py, jdata, bjdata and matplotlib Python modules\n",
-        "#!apt-get install nvidia-opencl-icd-384        # optional: install nvidia OpenCL(+2min), needed for mmc/mmclab demos later\n",
+        "! sudo apt-get update && sudo apt-get install octave jq libpocl2 pocl-opencl-icd libnvidia-compute-535   # install octave (a free matlab clone)\n",
+        "! pip install oct2py jdata bjdata matplotlib plotly   # install oct2py, jdata, bjdata and matplotlib Python modules\n",
         "\n",
         "# add octave support to colab notebook\n",
         "%load_ext oct2py.ipython\n",
         "\n",
-        "# download and unzip mcxlab\n",
-        "! rm -rf mcxlab*\n",
+        "# download and unzip MCXStudio\n",
+        "! rm -rf MCXStudio*\n",
         "! wget https://mcx.space/nightly/release/MCX24/MCXStudio-linux-x86_64-nightlybuild.zip  # download MCX suite\n",
         "! unzip -o MCXStudio-linux-x86_64-nightlybuild.zip && rm -rf MCXStudio-linux-x86_64-nightlybuild.zip # unzip MCX suite\n",
         "\n",
@@ -116,6 +184,8 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# How to navigate between notebook cells\n",
+        "\n",
         "Juputer Notebook is made of small \"sections\", called cells. There are two types of cells - text and code.\n",
         "\n",
         "The code section is what you will be interacting throughout this workshop.\n",
@@ -132,7 +202,7 @@
         "%%shell\n",
         "# @title A shell script cell - first line is `%%shell`\n",
         "\n",
-        "# in this cell, you are expected to type bash commands\n",
+        "# in this cell, you are expected to type only bash shell commands\n",
         "\n",
         "echo $SHELL\n",
         "pwd\n",
@@ -150,7 +220,7 @@
         "%%octave\n",
         "# @title An Octave/MATLAB script cell - first line is `%%octave`\n",
         "\n",
-        "# in this cell, you are expected to type Octave/MATLAB commands\n",
+        "# in this cell, you are expected to type only Octave/MATLAB commands\n",
         "\n",
         "a=uint8(zeros(20, 30, 40)); %<- it is extremely important to terminate each command with ; to prevent printing large amount of data, it can kill a cell\n",
         "disp({size(a), class(a)})\n",
@@ -168,7 +238,7 @@
       "source": [
         "# @title A Python script cell - if no magic command (`%%`), Jupyter notebook use Python as the default cell type\n",
         "\n",
-        "# in this cell, you are expected to type Python commands\n",
+        "# in this cell, you are expected to type only Python commands\n",
         "\n",
         "import numpy as np\n",
         "a=np.zeros([20,30,40], dtype='uint8')  # use\n",
@@ -186,24 +256,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "When you are closing a notebook, please remember to select the drop-down menu on the right-top corner of the notebook page, right next to the \"RAM/Disk\" icons, and select **\"Disconnect and delete runtime\"**. Otherwise, your note notebook will not be able to connect to any runtimes because Google Colab only permits one active notebook.\n",
+        "# How to troubleshoot your notebook issues?\n",
         "\n",
-        "If you accidentally closing your tab before explicitly disconnecting and deleting your runtime, you can go to menu Runtime, and select **\"Manage sessions\"** to disconnect/delete previously opened runtimes.\n",
-        "\n",
-        "**To avoid being locked out of the Google Colab service, please always maintain a single session.**"
+        "- if you receive an error that you can not allocate a new GPU runtime, please close all your previously opened sessions via Runtime/Manage sessions menu, and disconnect and delete previous sessions.\n",
+        "- if you run out of compute units, please go to https://colab.research.google.com/signup and purchase new compute units\n",
+        "- if for some reason, a cell hangs while running (takes more than few min without responses), please select the runtime drop-down menu and select \"Disconnect and delete runtime\" - or double click on the run-button, it will ask you to reset the runtime. Once you reconnect or reset the runtime, you must rerun the initial setup script in **Step 0** at the beginning.\n",
+        "- if any of the code section returns an error that a command is not found, very likely you did not run the initial setup section in Step 0, or you type MATLAB/Octave commands in a Python cell, or vice versa.\n",
+        ""
       ],
       "metadata": {
-        "id": "MJOuEXLCzsqS"
+        "id": "76vaQXV9u14i"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "NKM94VsSzglQ"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
