update training goals

--- a/Training/MCX2024_1A_jupyter_notebook_basics.ipynb
+++ b/Training/MCX2024_1A_jupyter_notebook_basics.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyP4+tCac4Ob6yR7uCSphfVI",
+      "authorship_tag": "ABX9TyOQEF8Ql24fFRHenZgdrK6E",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "> Purpose: <font color='green'>In this document, we go over important guidelines to help you use Google Colab and Jupyter Notebook and familiar yourself with the training material format.</font>"
+        "> **Training Goals**: <font color='green'>In this document, we go over important guidelines to help you use Google Colab and Jupyter Notebook and familiar yourself with the training material format.</font>"
       ],
       "metadata": {
         "id": "ZYtDub9Mws_k"
