add training goals

--- a/Training/MCX2024_1C_mcx_command_line.ipynb
+++ b/Training/MCX2024_1C_mcx_command_line.ipynb
@@ -70,6 +70,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "> **Training Goals**: <font color='green'>In this document, we explain `mcx` executable command line flags, input formats, volumetric/detected photon/trajectory output formats and best practices guidelines for running photon simulations in a terminal - one of the most flexible mode.</font>"
+      ],
+      "metadata": {
+        "id": "ldlnmM4Izlnh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## <font color='orange'>Step 0: Setting up MCX and Octave environments within Google Colab</font>\n",
         "\n",
         "> **You must rerun all cells in Step 0 in appearance order when you start a new session, or after reconnect to a runtime**\n",
@@ -302,7 +311,7 @@
         "id": "pPMw-ttzFZVf",
         "outputId": "a30e4281-3d1a-4f75-9d0d-0f40df35df94"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
